backend/kustomize/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oetzi-database
spec:
  selector:
    app: oetzi-database
  ports:
    - port: 5432
      targetPort: 5432
