backend/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oetzi-webserver
spec:
  selector:
    app: oetzi-webserver
  ports:
    - name: http
      port: 8080
      targetPort: 80
