backend/kustomize/base/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    component: webserver
  ports:
    - name: http
      port: 8080
      targetPort: 80
